# electric-maple

./: .gitignore  .gitlab-ci.yml  .gitmodules
client/: CMakeLists.txt  build.gradle  common.sh  download_gst.sh  gradle.properties  settings.gradle
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/plutovr/electricmaple/standalone_client/: StreamingApplication.kt
client/app/src/main/java/org/freedesktop/electricmaple/standalone_client/: StreamingActivity.kt  StreamingApplication.kt
client/gradle/wrapper/: gradle-wrapper.properties
client/gstreamer_android/: CMakeLists.txt
client/src/: main.cpp
client/src/em/: CMakeLists.txt  em_colorspaces.hpp  em_connection.c  em_display_refresh_rates.cpp  em_display_refresh_rates.hpp  em_passthrough.cpp  em_passthrough.hpp  em_remote_experience.cpp  em_remote_experience.h  em_stream_client.c  em_system_properties.cpp  em_system_properties.hpp  em_xr_context.hpp  gst_common.h  m_predict.c  m_relation_history.cpp  m_vec3.h
client/src/em/render/: GLError.cpp  render.cpp  render.hpp
proto/: electricmaple.proto
scripts/: android-setup.sh
server/: CMakeLists.txt  README.md
server/src/ems/: ems_callbacks.cpp  ems_compositor.cpp  ems_compositor.h  ems_hmd.cpp  ems_instance.cpp  ems_motion_controller.cpp  ems_server_main.cpp
server/src/ems/gst/: CMakeLists.txt  ems_gstreamer.h  ems_gstreamer_pipeline.c  ems_gstreamer_pipeline.h  ems_gstreamer_src.c  ems_gstreamer_src.h  ems_pipeline_args.c  ems_pipeline_args.h  ems_signaling_server.c
server/src/ems/gst/cuda/: ems_vk_cuda_gst_buffer.cpp  ems_vk_cuda_gst_buffer.h  ems_vk_cuda_image.cpp  ems_vk_cuda_image.h  ems_vk_cuda_image_pool.cpp  ems_vk_cuda_image_pool.h  ems_win32_security_attributes.hpp
server/src/test/: CMakeLists.txt
